--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,7 +6,7 @@
 body{
     font-size: 1rem;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: seashell;
+    background-color: rgb(185, 181, 181);
 }
 #area-cabecalho{
     padding: 0.9rem;
@@ -36,10 +36,75 @@ body{
 }
 #area-principal{
     width: 57.7rem;
-    margin: 0.5rem auto;
+    margin: 0.9rem auto;
     display: flex;
     flex-wrap: wrap;
 }
-#area-postagens{
+#area-postagens {
     width: 41.5rem;
 }
+/*CAIXA DO MAIN- POSTAGEM DO BLOG*/
+#area-lateral{
+    width: 15rem;
+    margin-left: 1.2rem;
+}
+.postagem {
+    padding: 1rem;
+    background-color: #ffff;
+}
+.postagem-imagem{
+    width: 39rem;
+   
+}
+.postagem-titulo{
+    color: goldenrod;
+}
+.postagem-data{
+    font-size: 0.8rem;
+    display: block;
+    padding-bottom: 0.8rem;
+}
+.postagem a{
+    text-decoration: none;
+}
+.postagem a:visited, .postagem a:link{
+    color: darkorange;
+}
+.postagem a:hover{
+    text-decoration:underline;
+}
+/*ASIDE-CONTEUDO LATERAL*/
+.conteudo-lateral{
+    padding: 0.8rem ;
+    margin-bottom: 0.7rem;
+    background-color: #ffff;
+}
+.conteudo-lateral-titulo{
+    color: darkred;
+    background-color: rgb(187, 187, 187);
+    padding: 0.3rem;
+}
+.texto-postagem-lateral{
+    font-size: 0.8rem;
+    padding: 0.3rem;
+}
+.conteudo-lateral a{
+    text-decoration: none;
+    display: block;
+    margin: 0.2rem;
+    font-size: 0.8rem;
+}
+.conteudo-lateral a:visited, .conteudo-lateral a:link{
+    color: goldenrod;
+}
+.conteudo-lateral a:hover{
+    text-decoration: underline;
+}
+footer{
+    width: 57.5rem;
+    margin: 9px auto;
+}
+ footer p{
+     text-align: center;
+     background-color: #ccc;
+ }
